# computer-graphics-lab-3

./: .gitmodules  CMakeLists.txt  drawf.cs
libs/: CMakeLists.txt
src/: filler.cpp  filler.h  line_drawlers.cpp  line_drawlers.h  main.cpp  minimap.cpp  minimap.h  minmap.h  triangle.cpp  triangle.h  utils.h
src/filler/: filler.h  recursive_filler.h  scanning_line_filler.h
src/line_drawler/: dda_line_drawler.h  line_drawler.h  simple_line_drawler.h
src/minimap/: delay_decorator.h  minimap.h  pixel_perfect_minimap.cpp  pixel_perfect_minimap.h  up_scaled_image.cpp  up_scaled_image.h
